--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "LearnWords"
   ],
   "license": "ISC",
+  "engines": {
+    "node": "18.x"
+  },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
